--- a/index.html
+++ b/index.html
@@ -1,20 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Todo - Redux</title>
 
+    <!-- Título e Descrição para SEO -->
+    <title>Tuh Doo - To-Do List com Redux</title>
+    <meta
+      name="description"
+      content="O Tuh Doo é um aplicativo de lista de tarefas desenvolvido com Redux e React, oferecendo uma interface interativa e animações. Gerencie suas tarefas de forma eficiente!"
+    />
+    <meta
+      name="keywords"
+      content="todolist, redux, react, to-do list, gerenciamento de tarefas, animações, micro-interações"
+    />
+
+    <!-- Open Graph para redes sociais -->
+    <meta property="og:title" content="Tuh Doo - To-Do List com Redux" />
+    <meta
+      property="og:description"
+      content="O Tuh Doo é um aplicativo de lista de tarefas desenvolvido com Redux e React, oferecendo uma interface interativa e animações. Gerencie suas tarefas de forma eficiente!"
+    />
+    <meta
+      property="og:image"
+      content="https://via.placeholder.com/1200x630?text=Tuh+Doo"
+    />
+    <meta
+      property="og:url"
+      content="https://miguelitodev.github.io/redux-todolist"
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+
+    <!-- Preconnect para Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Fonte de ícones -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+
+    <!-- Meta Tags para responsividade e melhorias de SEO -->
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="Miguelito Dev" />
+    <meta name="theme-color" content="#4CAF50" />
+    <meta name="application-name" content="Tuh Doo - Redux To-Do List" />
   </head>
   <body>
     <div id="root"></div>
+
+    <!-- Script principal -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
